1.19-4.1.1:
- Update to 1.19.4
- 1.19.3 compatibility fix in McJtyLib

1.19-4.1.0:
- Updated to Latest McJtyLib and made compatible with 1.19.3

1.19-4.0.3:
- Fixed a problem with modular storage where the compact button would erase the entire contents of the storage if you pressed it while the card was unlocked. Fixed by letting it not do anything in that case

1.19-4.0.2:
- Compact works again (modular storage)

1.19-4.0.1:
- Fixed a problem with the crafting grid in the storage scanner and modular storage. If some items were missing it wasn't showing it correctly

1.19-4.0.0:
- Port to 1.19

1.18-3.0.8:
- Fixed a problem on servers where removing a storage module from the modular storage caused the client to disconnect if that storage module had more then 128 items in it

1.18-3.0.7:
- Port to 1.18.2

1.18-3.0.6:
- Apparently NEI sometimes gives wrong slot numbers to it's crafting recipe api. Added protection for that
- Fixed a bug in modular storage crafting where it would fail if the number of desired items matched exactly

1.18-3.0.5:
- Fixed a serious duping bug in combination with the crafter

1.18-3.0.4:
- Fixed a problem with items not getting restored when breaking and placing blocks

1.18-3.0.3:
- Huge lag reduction when opening the modular storage user interface

1.18-3.0.2:
- Updates for McJtyLib and fixes

1.18-3.0.1:
- Fixed blocks not breaking correctly with iron pickaxe

1.18-3.0.0:
- First update to 1.18

1.16-2.0.15:
- Updated to latest version of McJtyLib

1.16-2.0.14:
- Updated to latest version of McJtyLib
- Fixed the rendering of the storage scanner module

1.16-2.0.13:
- The storage scanner uses a better fake player that matches the name of the real player if online

1.16-2.0.12:
- By default the storage scanner will no longer be able to scan inventories that don't belong to the player that placed the storage scanner. There is a new scannerNoRestrictions configuration flag that you can use to go back to the old behaviour

1.16-2.0.11: