@@ -25,12 +25,12 @@ Everything related to storage
 [[dependencies.rftoolsstorage]]
     modId="mcjtylib"
     mandatory=true
-    versionRange="[1.19-7.2.1,)"
+    versionRange="[1.19-7.2.2,)"
     ordering="AFTER"
     side="BOTH"
 [[dependencies.rftoolsstorage]]
     modId="rftoolsbase"
     mandatory=true
-    versionRange="[1.18-3.0.8,)"
+    versionRange="[1.19-3.0.8,)"
     ordering="AFTER"
     side="BOTH"
